🐛 fix(npm): resolve global installation failure with TypeScript compilation errors
- Removed problematic postinstall script that was causing TypeScript compilation errors during global installation
- Replaced postinstall with prepare script that builds during npm publish, not during user installation
- Updated version from 1.2.0 to 1.2.1 for this critical bug fix

This resolves the issue where "npm install -g image-for-me-dear-ai" was failing with TypeScript compilation errors, enabling users to successfully install the package globally via npm.

--- a/.env.example
+++ b/.env.example
@@ -1,97 +1,134 @@
-# Image Generation MCP Server Configuration
-# Copy this file to .env and fill in your API keys
+# ===========================================
+# ImageForMeDearAi Configuration Template
+# ===========================================
+# Copy this file to .env and configure your settings
+# Get started quickly: npm run install-providers
 
-# =============================================================================
+# ===========================================
+# AI Provider Configuration
+# ===========================================
+
 # OpenAI/ChatGPT Configuration
-# =============================================================================
 # Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_API_KEY=sk-your-openai-api-key-here
 CHATGPT_ENABLED=true
 CHATGPT_MODEL=dall-e-3
-# Optional: Organization ID if you're part of an organization
+CHATGPT_VISION_MODEL=gpt-4-vision-preview
+CHATGPT_QUALITY=standard
+CHATGPT_SIZE=1024x1024
+
+# Optional OpenAI settings
 # OPENAI_ORGANIZATION=your-org-id
-# Optional: Custom base URL if using a proxy or alternative endpoint
 # OPENAI_BASE_URL=https://api.openai.com/v1
-# Optional: Request timeout in milliseconds (default: 30000)
 # CHATGPT_TIMEOUT=30000
 
-# =============================================================================
-# HuggingFace Configuration
-# =============================================================================
+# HuggingFace Configuration  
 # Get your token from: https://huggingface.co/settings/tokens
-HUGGINGFACE_API_KEY=your-huggingface-token-here
+HUGGINGFACE_API_KEY=hf_your-huggingface-token-here
 HUGGINGFACE_ENABLED=true
 HUGGINGFACE_MODEL=stabilityai/stable-diffusion-xl-base-1.0
-# Optional: Custom endpoint if using a different inference endpoint
+HUGGINGFACE_VISION_MODEL=Salesforce/blip-image-captioning-large
+HUGGINGFACE_TAGGING_MODEL=google/vit-base-patch16-224
+
+# Optional HuggingFace settings
 # HUGGINGFACE_ENDPOINT=https://api-inference.huggingface.co
-# Optional: Request timeout in milliseconds (default: 30000)
-# HUGGINGFACE_TIMEOUT=30000
+# HUGGINGFACE_TIMEOUT=60000
 
-# Alternative HuggingFace models you can try:
-# HUGGINGFACE_MODEL=stabilityai/stable-diffusion-2-1
-# HUGGINGFACE_MODEL=runwayml/stable-diffusion-v1-5
-# HUGGINGFACE_MODEL=stabilityai/stable-diffusion-xl-refiner-1.0
+# Alternative Models:
+# Generation: stabilityai/stable-diffusion-2-1, runwayml/stable-diffusion-v1-5
+# Vision: microsoft/DialoGPT-medium, facebook/blenderbot-400M-distill
+# Tagging: microsoft/resnet-50, facebook/detr-resnet-50
 
-# =============================================================================
+# ===========================================
 # Server Configuration
-# =============================================================================
-SERVER_NAME=image-for-me-dear-ai
-SERVER_VERSION=1.0.0
-# Optional: Server port (not typically used for MCP servers)
-# SERVER_PORT=3000
+# ===========================================
 
-# =============================================================================
-# Output Configuration
-# =============================================================================
-# Directory where generated images will be saved
+# Output Settings
 OUTPUT_DIRECTORY=./generated-images
-# Default output format for images
 OUTPUT_FORMAT=png
-# File naming pattern (supports: {{timestamp}}, {{hash}}, {{uuid}})
-OUTPUT_NAMING={{timestamp}}-{{hash}}
+OUTPUT_QUALITY=95
+OUTPUT_NAMING_PATTERN={{timestamp}}-{{hash}}-{{provider}}
 
-# =============================================================================
 # Cache Configuration
-# =============================================================================
-# Enable/disable caching system
 CACHE_ENABLED=true
-# Cache directory path
 CACHE_DIRECTORY=./cache
-# Maximum number of cached items
-CACHE_MAX_SIZE=100
-# Cache TTL in milliseconds (86400000 = 24 hours)
 CACHE_TTL=86400000
+CACHE_MAX_SIZE=100
+CACHE_MAX_FILE_SIZE=50000000
 
-# Cache TTL options:
+# Performance Settings
+MAX_CONCURRENT_REQUESTS=5
+REQUEST_TIMEOUT=120000
+RETRY_ATTEMPTS=3
+RETRY_DELAY=2000
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FILE=./logs/server.log
+LOG_MAX_SIZE=10000000
+LOG_MAX_FILES=5
+
+# Security Settings
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_WINDOW=60000
+RATE_LIMIT_MAX_REQUESTS=100
+CONTENT_POLICY_ENABLED=true
+
+# ===========================================
+# Feature Flags
+# ===========================================
+
+FEATURE_IMAGE_GENERATION=true
+FEATURE_LOGO_GENERATION=true
+FEATURE_IMAGE_DESCRIPTION=true
+FEATURE_IMAGE_TAGGING=true
+FEATURE_BATCH_PROCESSING=false
+FEATURE_WEBHOOK_NOTIFICATIONS=false
+
+# ===========================================
+# Development Settings (Optional)
+# ===========================================
+
+# Environment
+NODE_ENV=production
+# NODE_ENV=development
+
+# Development debugging
+# DEBUG=image-for-me-dear-ai:*
+# DEVELOPMENT_MODE=true
+# HOT_RELOAD=true
+
+# Server settings (for development/testing)
+# SERVER_PORT=3000
+# SERVER_HOST=localhost
+
+# ===========================================
+# Cache TTL Reference
+# ===========================================
 # 1 hour:    3600000
-# 6 hours:   21600000
+# 6 hours:   21600000  
 # 12 hours:  43200000
-# 24 hours:  86400000
+# 24 hours:  86400000 (default)
 # 7 days:    604800000
 # 30 days:   2592000000
 
-# =============================================================================
-# Performance Configuration
-# =============================================================================
-# Maximum number of concurrent requests (optional)
-# MAX_CONCURRENT_REQUESTS=5
-# Request queue timeout in milliseconds (optional)
-# QUEUE_TIMEOUT=60000
+# ===========================================
+# Advanced Configuration (Optional)
+# ===========================================
 
-# =============================================================================
-# Logging Configuration
-# =============================================================================
-# Log level: debug, info, warn, error (default: info)
-# LOG_LEVEL=info
-# Enable detailed request logging (default: false)
-# LOG_REQUESTS=false
-# Log file path (optional, logs to console by default)
-# LOG_FILE=./logs/server.log
+# Multi-tenant support (Enterprise)
+# MULTI_TENANT_ENABLED=false
 
-# =============================================================================
-# Development Configuration
-# =============================================================================
-# Enable development mode with detailed debugging (default: false)
-# NODE_ENV=development
-# Enable hot reload for development (default: false)
-# HOT_RELOAD=false
+# Webhook notifications
+# WEBHOOK_URL=https://your-webhook-endpoint.com/notify
+# WEBHOOK_SECRET=your-webhook-secret
+
+# External cache (Redis/MongoDB)
+# CACHE_STRATEGY=filesystem
+# REDIS_URL=redis://localhost:6379
+# MONGODB_URL=mongodb://localhost:27017/imageformedearai
+
+# Monitoring and metrics
+# METRICS_ENABLED=false
+# HEALTH_CHECK_ENABLED=true
+# PROMETHEUS_ENDPOINT=/metrics
