--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-for-me-dear-ai",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "description": "MCP server for AI-powered image generation with ChatGPT and HuggingFace integration",
   "main": "dist/server.js",
   "type": "module",
@@ -18,7 +18,7 @@
     "test:watch": "jest --watch",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
-    "postinstall": "npm run build"
+    "prepare": "npm run build"
   },
   "keywords": [
     "mcp",
